# math-interpreter-py

./: README.md  interpreter.py  lexer.py  main.py  nodes.py  parser_.py  pyproject.toml  test.py  tokens.py
math_interpreter_py/: gui.py  main.py
math_interpreter_py/interpreter/: interpreter.py  lexer.py  main.py  nodes.py  parser.py  tokens.py
tests/: test_interpreter.py  test_lexer.py  test_parser.py
