[tool.poetry]
name = "math_interpreter_py"
version = "0.1.0"
description = "Simple infix and postfix math intepreter"
authors = ["Bryan Ngo <bryanngo@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
